--- a/componentDataBinding/src/app/app.component.html
+++ b/componentDataBinding/src/app/app.component.html
@@ -1,5 +1,6 @@
-<input type="text" placeholder="Send to first component" [(ngModel)] = "secondDataBind">
-<input type="text" placeholder="Send to second component" [(ngModel)] = "dataBind"><br>
 
-<app-first-component [data]="secondDataBind"></app-first-component>
-<app-second-component [data]="dataBind"></app-second-component>
+{{dataFromFirstComponent}}<br>
+{{dataFromSecondComponent}}
+
+<app-first-component (data)="getDataFromChild($event)"></app-first-component>
+<app-second-component></app-second-component>
